After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 66457 - export to TeX DVI via groff fails
export to TeX DVI via groff fails
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export HTML
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-12-07 21:27 UTC by Andreas J. Guelzow
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
failing example (1.96 KB, application/octet-stream)
2001-12-17 18:09 UTC, Andreas J. Guelzow
  Details
simpler example (xml file) (11.06 KB, text/plain)
2001-12-17 19:53 UTC, Andreas J. Guelzow
  Details
proposed patch (1.24 KB, patch)
2001-12-27 01:24 UTC, Andreas J. Guelzow
none Details | Review

Description Andreas J. Guelzow 2001-12-07 21:27:34 UTC
open gnumeric
type 'Hello' into A1
save as TeX DVI via groff
saving fails (the file contains only the sheet name)
with the following console output:

tbl:<standard input>:7: `.' not last character on line
tbl:<standard input>:7: giving up on this table
Line  -- Unclosed block, footnote, or other diversion (|h)
tbl:<standard input>:7: `.' not last character on line
tbl:<standard input>:7: giving up on this table
Line  -- Unclosed block, footnote, or other diversion (|h)

Obviously we can create DVI files by exporting as LaTeX and then run
through latex and we can create PDF files by exporting as LaTeX and then
run through pdflatex.
Comment 1 Andreas J. Guelzow 2001-12-17 18:08:39 UTC
I tried to replicate this again and failed...at first.
It seems to be related to file content. I am attaching a
sample file.

Strangely enough exporting it as groff file and then passing it to
groff does not fail and the code looks identical to me.
Comment 2 Andreas J. Guelzow 2001-12-17 18:09:54 UTC
Created attachment 6237 [details]
failing example
Comment 3 Andreas J. Guelzow 2001-12-17 19:53:55 UTC
Created attachment 6242 [details]
simpler example (xml file)
Comment 4 Jody Goldberg 2001-12-26 16:09:49 UTC
 can replicate this, but nothing obvious presents itself.  As you point out
 Saving it as a roff file, then manually calling groff seems to work fine
 which is exactly what the code appears to be doing.
Comment 5 Andreas J. Guelzow 2001-12-27 01:23:46 UTC
I don't know why, but suddenly it started failing for me even when I
called groff manually. In fact that was a great help since it allowed
me to track down the problem. PATCH is attached.
Comment 6 Andreas J. Guelzow 2001-12-27 01:24:32 UTC
Created attachment 6304 [details] [review]
proposed patch
Comment 7 Jody Goldberg 2001-12-27 02:20:25 UTC
Very mysterious.
Please commit.
Comment 8 Andreas J. Guelzow 2001-12-27 08:01:37 UTC
patch committed